# qemu-virt-hello

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  kernel.ld
kernel/: asm.h  esr.h  gic.c  gic.h  irq.S  irq.c  irq.h  irq_entry.c  irq_entry.h  machine.h  macro.h  main.c  printf.c  printf.h  registers.h  start.S  timer.c  timer.h  tools.S  tools.h  types.h  uart.c  uart.h  vector.S
